fix aside overflow on mobile

--- a/src/styles/layouts/MainLayout.module.css
+++ b/src/styles/layouts/MainLayout.module.css
@@ -21,6 +21,12 @@
 	grid-area: main;
 }
 
+@media (max-width: 800px) {
+	.aside {
+		overflow: hidden;
+	}
+}
+
 @media (min-width: 800px) {
 	.container {
 		grid-template-columns: 250px 1fr;
